ui bug fix on mobile

--- a/app/javascript/app/app.scss
+++ b/app/javascript/app/app.scss
@@ -53,7 +53,6 @@ a {
 
 .outer-form-div{
   max-width: 56rem;
-  min-width: 40rem;
   margin-right: auto;
   margin-left: auto;
   background: #f6f8fa;
@@ -64,7 +63,6 @@ a {
 
 @media screen and (max-width: 800px) {
   .outer-form-div{
-
     margin-right: 0;
     margin-left: 0;
     background: #f6f8fa;
